# singing-motors

./: .gitignore  README.md  config.speech.toml  config.toml  config.warmups-all.toml  pyproject.toml
docs/: bringup_checklist.md  mp3_to_midi_best.md  protocol_v1.md  protocol_v2.md  song-request-monetization-playbook.md  sound_quality_runbook.md  speech_text_mode.md  stepper-motor-music-parts-list.md  ui_dashboard.md
firmware/esp32/src/: CMakeLists.txt  main.c  motion_backend.h  motion_commands.c  motion_commands.h  motor_event_executor.c  motor_event_executor.h  playback_runtime.c  playback_runtime.h  playback_wave_engine.c  playback_wave_engine.h  protocol_codec.c  protocol_codec.h  protocol_defs.h  pulse_accounting.c  pulse_accounting.h  pulse_engine.c  pulse_engine.h  stream_parser.c  stream_parser.h  stream_queue.c  stream_queue.h
profiles/: default_instrument.toml
scripts/: evaluate_midi.py  generate_simple_midi.py  missed_step_probe.py  mp3_to_midi_best.py  quality_baseline.py  run_pipeline.sh  run_speech_pipeline.sh  serial_motor_spin_test.py  serial_motor_stress_test.py
speech_presets/: command_voice.toml  robot_clear.toml  robot_deep.toml  robot_fast.toml
tests/: test_allocator.py  test_arrangement_report.py  test_bench_platform.py  test_calibration_platform.py  test_cli_compile.py  test_cli_tools.py  test_config.py  test_firmware_decel_ramp_zero.py  test_firmware_home_precision.py  test_firmware_isr_safety.py  test_firmware_motion_loops.py  test_firmware_phase_catchup.py  test_firmware_playback_event_groups.py  test_firmware_playback_wave_engine.py  (+28 more)
(+140 files in other folders)
