[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music2"
version = "0.1.0"
description = "Host-side MIDI to configurable-stepper streaming controller"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.122.0",
  "mido>=1.3.2",
  "pyserial>=3.5",
  "uvicorn>=0.30.0",
  "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8.0",
]
video = [
  "opencv-python-headless>=4.8",
  "numpy>=1.26",
]
transcribe = [
  "basic-pitch>=0.4.0",
  "demucs>=4.0.1",
  "librosa>=0.10.2",
  "numpy>=1.26",
  "piano-transcription-inference>=0.0.5",
  "torch>=2.2.0",
  "torchcrepe>=0.0.23",
]

[project.scripts]
music2 = "music2.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
